# StickyVO

./: .gitignore  README.md  requirements.txt
modules/lightgluestick/: CMakeLists.txt
modules/lightgluestick/include/stickyvo_lgs/: lgs_config.hpp  lgs_frontend.hpp  lgs_types.hpp
modules/lightgluestick/python/: lgs_py_bridge.py
modules/lightgluestick/python/lightgluestick/: __init__.py  lightgluestick.py  lsd.py  run.py  superpoint.py  superpoint_open.py  two_view_pipeline.py  utils.py  viz2d.py  wireframe.py
modules/lightgluestick/src/: lgs_frontend.cpp
modules/stickyvo/: CMakeLists.txt
modules/stickyvo/include/stickyvo/: bundle_adjustment.hpp  camera.hpp  core.hpp  keyframe.hpp  local_refine.hpp  map.hpp  pnp.hpp  residuals.hpp  track_db.hpp  triangulation.hpp  types.hpp  vo_frontend.hpp
modules/stickyvo/src/: bundle_adjustment.cpp  core.cpp  local_refine.cpp  pnp.cpp  track_db.cpp  triangulation.cpp  vo_frontend.cpp
ros2/stickyvo_lgs/: CMakeLists.txt  package.xml
ros2/stickyvo_lgs/env-hooks/: 50.stickyvo_lgs_pythonpath.sh.in
ros2/stickyvo_ros/: CMakeLists.txt  package.xml
ros2/stickyvo_ros/config/: blackfly-5mm.yaml
ros2/stickyvo_ros/include/stickyvo_ros/: ahrs.hpp  node.hpp
ros2/stickyvo_ros/launch/: stickyvo.launch.py
ros2/stickyvo_ros/src/: main.cpp  node.cpp
