<?xml version="1.0"?>
<package format="3">
  <name>stickyvo_lgs</name>
  <version>0.0.1</version>
  <description>Adapter package that exports modules/lightgluestick as a colcon package</description>

  <maintainer email="shenbax@seas.upenn.edu">Shenbagaraj Kannapiran</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pybind11_vendor</build_depend>
  <build_depend>pybind11</build_depend>
  <exec_depend>pybind11_vendor</exec_depend>
  <exec_depend>pybind11</exec_depend>
  <build_depend>python3-dev</build_depend>
  <exec_depend>python3-dev</exec_depend>
  <exec_depend>python3</exec_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
