<?xml version="1.0"?>
<package format="3">
  <name>stickyvo_ros</name>
  <version>0.0.1</version>
  <description>StickyVo ROS2 reader (WIP)</description>

  <maintainer email="shenbax@seas.upenn.edu">Shenbagaraj Kannapiran</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>stickyvo_lgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
